Changed size field for folders to BigInteger field. Added framework to filesystem database to display information about which dropbox files are being analyzed during import. Added colors based on filetype to zoomable treemap.

--- a/filesystem/templates/my_treemap.html
+++ b/filesystem/templates/my_treemap.html
@@ -6,4 +6,13 @@
 <body>
 
 </body>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script>
+
+
+    var id = 1
+    d3.json("./json")
+    .get("?depth=2&id=" + id , function(error, data) { console.log(data); });
+</script>
+
 </html>
